--- a/python_grammar/05.Python Conditional Statement.ipynb
+++ b/python_grammar/05.Python Conditional Statement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c3bb63f",
+   "id": "7c2600f7",
    "metadata": {},
    "source": [
     "## 제어문"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bed3250d",
+   "id": "6d77dbf6",
    "metadata": {},
    "source": [
     "### 조건문이란 무엇인가?"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "73cdf80b",
+   "id": "469eedf4",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4de8962c",
+   "id": "0be2d602",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a584e943",
+   "id": "81de0c1a",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b60b89d9",
+   "id": "a25e7b81",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a46e2c0",
+   "id": "fc2dafa3",
    "metadata": {},
    "source": [
     "### And, Or, Not"
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fcb655b4",
+   "id": "11a4cff3",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8fe5bba",
+   "id": "9c2b7b6a",
    "metadata": {},
    "source": [
     "### In, Not, In"
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a24c6152",
+   "id": "0fe4762b",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fc46ff2f",
+   "id": "2a566cf7",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "db7971d5",
+   "id": "2b31fcec",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "46f78671",
+   "id": "6cc0e807",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e7843389",
+   "id": "265f9b0b",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd1bf94c",
+   "id": "b567ce4e",
    "metadata": {},
    "source": [
     "### 다양한 조건을 판단하는 elif"
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "5755f44c",
+   "id": "66522762",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "eeb61f40",
+   "id": "2a256671",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b18b78a2",
+   "id": "f272ea4e",
    "metadata": {},
    "source": [
     "### 조건부 표현식"
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "78b2fb51",
+   "id": "efedc470",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "150cd496",
+   "id": "3961eac2",
    "metadata": {},
    "source": [
     "### WHILE문"
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "68f8fb21",
+   "id": "ab6083e0",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46dce25c",
+   "id": "625545ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18835b2a",
+   "id": "3484675b",
    "metadata": {},
    "source": [
     "### WHILE 문 강제로 빠져나가기"
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c4e4d41",
+   "id": "dfaf8e03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5c37e53",
+   "id": "f4eb3090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd609730",
+   "id": "2ae58d7a",
    "metadata": {},
    "source": [
     "### while 문의 맨 처음으로 돌아가기"
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "050452af",
+   "id": "69159859",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f1f2d5a",
+   "id": "cd463e4f",
    "metadata": {},
    "source": [
     "### 무한 루프"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14a01ba",
+   "id": "3e9c5ae4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09f501aa",
+   "id": "e4df91c7",
    "metadata": {},
    "source": [
     "## FOR 문"
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e41e480e",
+   "id": "50a2c73e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2499cdc1",
+   "id": "b4af0f2d",
    "metadata": {},
    "source": [
     "### 다양한 FOR 문의 사용"
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78c36002",
+   "id": "871244e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "591c1bb0",
+   "id": "fd8a529a",
    "metadata": {},
    "source": [
     "### FOR 문의 응용"
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "edfefa00",
+   "id": "cef831f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f00c969d",
+   "id": "0299b41f",
    "metadata": {},
    "source": [
     "### FOR 문과 CONTINUE 문"
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2003bb3c",
+   "id": "fc47c06b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79df21bf",
+   "id": "b41dd425",
    "metadata": {},
    "source": [
     "### FOR 문과 함께 자주 사용하는 RANGE 함수"
@@ -625,10 +625,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "56e4c634",
+   "execution_count": 4,
+   "id": "c7ab27d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 10)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = range(10)\n",
     "a"
@@ -636,10 +647,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4bff5259",
+   "execution_count": 3,
+   "id": "2ce354d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(1, 11)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = range(1, 11)\n",
     "a"
@@ -647,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98740a63",
+   "id": "9bfdd0cc",
    "metadata": {},
    "source": [
     "### Range 함수의 예시 살펴보기"
@@ -655,10 +677,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c0c2d397",
+   "execution_count": 2,
+   "id": "8749226f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
     "add = 0 \n",
     "for i in range(1, 11): \n",
@@ -669,10 +699,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a2ad1b0c",
+   "execution_count": 1,
+   "id": "bb914ea3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번 학생 축하합니다. 합격입니다.\n",
+      "3번 학생 축하합니다. 합격입니다.\n",
+      "5번 학생 축하합니다. 합격입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# marks3.py\n",
     "marks = [90, 25, 67, 45, 80]\n",
@@ -684,19 +724,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3dfec12c",
+   "execution_count": 18,
+   "id": "b456f528",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------\n",
+      "    2 단\n",
+      "-------------\n",
+      "\n",
+      "2 * 1 = 2\n",
+      "2 * 2 = 4\n",
+      "2 * 3 = 6\n",
+      "2 * 4 = 8\n",
+      "2 * 5 = 10\n",
+      "2 * 6 = 12\n",
+      "2 * 7 = 14\n",
+      "2 * 8 = 16\n",
+      "2 * 9 = 18\n",
+      "\n",
+      "-------------\n",
+      "    3 단\n",
+      "-------------\n",
+      "\n",
+      "3 * 1 = 3\n",
+      "3 * 2 = 6\n",
+      "3 * 3 = 9\n",
+      "3 * 4 = 12\n",
+      "3 * 5 = 15\n",
+      "3 * 6 = 18\n",
+      "3 * 7 = 21\n",
+      "3 * 8 = 24\n",
+      "3 * 9 = 27\n",
+      "\n",
+      "-------------\n",
+      "    4 단\n",
+      "-------------\n",
+      "\n",
+      "4 * 1 = 4\n",
+      "4 * 2 = 8\n",
+      "4 * 3 = 12\n",
+      "4 * 4 = 16\n",
+      "4 * 5 = 20\n",
+      "4 * 6 = 24\n",
+      "4 * 7 = 28\n",
+      "4 * 8 = 32\n",
+      "4 * 9 = 36\n",
+      "\n",
+      "-------------\n",
+      "    5 단\n",
+      "-------------\n",
+      "\n",
+      "5 * 1 = 5\n",
+      "5 * 2 = 10\n",
+      "5 * 3 = 15\n",
+      "5 * 4 = 20\n",
+      "5 * 5 = 25\n",
+      "5 * 6 = 30\n",
+      "5 * 7 = 35\n",
+      "5 * 8 = 40\n",
+      "5 * 9 = 45\n",
+      "\n",
+      "-------------\n",
+      "    6 단\n",
+      "-------------\n",
+      "\n",
+      "6 * 1 = 6\n",
+      "6 * 2 = 12\n",
+      "6 * 3 = 18\n",
+      "6 * 4 = 24\n",
+      "6 * 5 = 30\n",
+      "6 * 6 = 36\n",
+      "6 * 7 = 42\n",
+      "6 * 8 = 48\n",
+      "6 * 9 = 54\n",
+      "\n",
+      "-------------\n",
+      "    7 단\n",
+      "-------------\n",
+      "\n",
+      "7 * 1 = 7\n",
+      "7 * 2 = 14\n",
+      "7 * 3 = 21\n",
+      "7 * 4 = 28\n",
+      "7 * 5 = 35\n",
+      "7 * 6 = 42\n",
+      "7 * 7 = 49\n",
+      "7 * 8 = 56\n",
+      "7 * 9 = 63\n",
+      "\n",
+      "-------------\n",
+      "    8 단\n",
+      "-------------\n",
+      "\n",
+      "8 * 1 = 8\n",
+      "8 * 2 = 16\n",
+      "8 * 3 = 24\n",
+      "8 * 4 = 32\n",
+      "8 * 5 = 40\n",
+      "8 * 6 = 48\n",
+      "8 * 7 = 56\n",
+      "8 * 8 = 64\n",
+      "8 * 9 = 72\n",
+      "\n",
+      "-------------\n",
+      "    9 단\n",
+      "-------------\n",
+      "\n",
+      "9 * 1 = 9\n",
+      "9 * 2 = 18\n",
+      "9 * 3 = 27\n",
+      "9 * 4 = 36\n",
+      "9 * 5 = 45\n",
+      "9 * 6 = 54\n",
+      "9 * 7 = 63\n",
+      "9 * 8 = 72\n",
+      "9 * 9 = 81\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for 문을 활용하여 구구단\n",
+    "\n",
+    "for i in range(2, 10):\n",
+    "    print('-------------')\n",
+    "    print(f'    {i} 단')\n",
+    "    print('-------------')\n",
+    "    print()\n",
+    "    for j in range(1, 10):\n",
+    "        print(f'{i} * {j} = {i*j}')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74426b9a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 리스트 컴프리헨션 사용하기"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d832b64",
+   "execution_count": 19,
+   "id": "08ed3fef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 안에 for 문을 포함하는 리스트 컴프리헨션(list comprehension)을 사용하면 좀 더 편리하고 직관적인 프로그램을 만들 수 있다.\n",
+    "\n",
+    "a = [1,2,3,4]\n",
+    "result = []\n",
+    "for num in a:\n",
+    "    result.append(num*3)\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "da750ef9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 위 예제에서는 a 리스트의 각 항목에 3을 곱한 결과를 result 리스트에 담았다.\n",
+    "\n",
+    "# 리스트 컴프리헨션을 사용하면 다음과 같이 좀 더 간단하게 작성할 수 있다.\n",
+    "\n",
+    "a = [1,2,3,4]\n",
+    "result = [num * 3 for num in a]\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67f562bf",
+   "metadata": {},
+   "source": [
+    "### 시간 측정을 위한 코드, 2배 이상 차이남"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c9878772",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List Comprehension Time: 0.0517575740814209\n",
+      "For loop Time: 0.1370556354522705\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "start = time.time() \n",
+    "numbers = [i for i in range(1000000)] \n",
+    "end = time.time() \n",
+    "print('List Comprehension Time:', end-start)\n",
+    "\n",
+    "start = time.time() \n",
+    "numbers = []\n",
+    "for i in range(1000000):\n",
+    "    numbers.append(i)\n",
+    "end = time.time() \n",
+    "print('For loop Time:', end-start)"
+   ]
   }
  ],
  "metadata": {
