--- a/python_grammar/클래스&내장함수_연습문제_실습용.ipynb
+++ b/python_grammar/클래스&내장함수_연습문제_실습용.ipynb
@@ -135,7 +135,15 @@
    "id": "b686ab29",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#1 \n",
+    "\n",
+    "-3의 절대값 3-3 = 0 , 0은 false = false\n",
+    "\n",
+    "#2\n",
+    "\n",
+    "a의 유니코드 97, chr(97)은 다시 a를 반환함 = true"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,11 +155,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4da2f202",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "alist = [1, -2, 3, -5, 8, -3]\n",
+    "\n",
+    "blist = list(filter(lambda x: x >= 0, alist))\n",
+    "\n",
+    "print(blist)\n",
+    "\n",
+    "# lambda로 양수인지 확읺고 filtered로 양수만 출력"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,11 +192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c94be636",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "234\n"
+     ]
+    }
+   ],
+   "source": [
+    "hex = '0xea'\n",
+    "a = int(hex, 16)\n",
+    "\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,11 +221,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f303e800",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 9, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4]\n",
+    "\n",
+    "result_list = list(map(lambda x: x * 3, a))\n",
+    "\n",
+    "print(result_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,11 +252,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4527968b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [-8, 2, 7, 5, -3, 5, 0, 1]\n",
+    "\n",
+    "max_value = max(a)\n",
+    "min_value = min(a)\n",
+    "\n",
+    "total = max_value + min_value\n",
+    "\n",
+    "print(total)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,11 +290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "730d116a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.6667\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = 17 / 3\n",
+    "rounded = round(result, 4)\n",
+    "\n",
+    "print(rounded)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,7 +327,14 @@
    "id": "93068ed8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import sys\n",
+    "\n",
+    "# args = sys.argv[1:]\n",
+    "# total = sum(int(arg) for arg in args)\n",
+    "\n",
+    "# print(total)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,7 +353,18 @@
    "id": "6cef3623",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "\n",
+    "# 1\n",
+    "os.chdir(\"C:/doit\")\n",
+    "\n",
+    "# 2\n",
+    "result = os.popen(\"dir\")\n",
+    "\n",
+    "# 3\n",
+    "print(result.read())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,7 +380,15 @@
    "id": "b69ab522",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import glob\n",
+    "\n",
+    "a = glob.glob(\"C:/doit/*.ipynb\")\n",
+    "\n",
+    "# 검색된 파일들 출력\n",
+    "for file in a:\n",
+    "    print(file)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -298,7 +405,15 @@
    "id": "e2a5f482",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "\n",
+    "\n",
+    "time = time.strftime(\"%Y/%m/%d %H:%M:%S\", time.localtime())\n",
+    "\n",
+    "# 출력합니다.\n",
+    "print(time)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,7 +429,13 @@
    "id": "c4b093dc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "numbers = list(range(1, 46))\n",
+    "lotto_numbers = random.sample(numbers, 6)\n",
+    "print(sorted(lotto_numbers))"
+   ]
   },
   {
    "cell_type": "markdown",
