--- a/05_Data_Analysis/02_DA_Mini_Project.ipynb
+++ b/05_Data_Analysis/02_DA_Mini_Project.ipynb
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 369,
-   "id": "1072e008",
+   "id": "6d49e42f",
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
     "plt.figure(figsize=(12, 8))\n",
     "\n",
     "monthly_active_days_target_1.plot(kind='line', marker='o', label='Target 1', color='#99ccff')\n",
-    "monthly_active_days_target_0.plot(kind='line', marker='x', label='Target 0', color='#e35f62')\n",
+    "monthly_active_days_target_0.plot(kind='line', marker='o', label='Target 0', color='#e35f62')\n",
     "\n",
     "plt.title('타겟별 월간 활성 학습 일수 분포')\n",
     "plt.xlabel('월간 활동학습일수(내림정렬)')\n",
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 362,
-   "id": "c2e6a9c7",
+   "id": "e66c5b81",
    "metadata": {
     "scrolled": true
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 363,
-   "id": "dddfa980",
+   "id": "b138f931",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 364,
-   "id": "8f105e0e",
+   "id": "51fbc22a",
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 365,
-   "id": "060a4455",
+   "id": "0d02ce40",
    "metadata": {
     "scrolled": true
    },
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 366,
-   "id": "69b1784a",
+   "id": "e0af3ca9",
    "metadata": {
     "scrolled": true
    },
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 367,
-   "id": "92ae034d",
+   "id": "01dd8410",
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 348,
-   "id": "a8c5c1de",
+   "id": "9baf5927",
    "metadata": {
     "scrolled": true
    },
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": 368,
-   "id": "3775500c",
+   "id": "0e04492c",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19dceb3a",
+   "id": "37c44645",
    "metadata": {},
    "source": [
     "### 결론\n",
